--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zaraki Sports</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
 <body>
@@ -15,7 +17,7 @@
         <nav>
 
             <a href="#" class="logo">
-                <img src="../avaliação individual/assets/img/logo.png" alt="">
+                <img src="../avaliação individual/assets/img/logo.png" alt="logo da loja">
             </a>
 
             <ul class="menu">
@@ -25,50 +27,34 @@
             </ul>
 
             <ul class="foto-perfil">
-                <li><a href=""><i class="bi bi-person-circle"></i></a></li>
+                <li><a href="#"><i class="bi bi-person-circle"></i></a></li>
             </ul>
-
         </nav>
     </header>
-
     <figure class="banner-principal">
-<img src="../avaliação individual/assets/img/banner-principal.jpg" alt="">
+        <img src="../avaliação individual/assets/img/banner.jpg" alt="banner do inicio ">
+    </figure>
 
+    <div class="container">
+        <div class="img-sinopse">
+            <img src="../avaliação individual/assets/img/sinopse-loja.jpg" alt="">
+        </div>
+        <div class="text">
+            <h2>Zaraki Sports</h2>
 
-</figure>
+            <p>Fundada em 23 de novembro de 2007, a ZARAKI SPORTS surgiu da paixão por automóveis de luxo e do sonho de
+                oferecer uma experiência incomparável no setor. Desde o início, a empresa enfrentou desafios
+                significativos, mas, com determinação e uma visão clara, superou cada obstáculo, tornando-se a maior
+                referência do mercado.
+            </p>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <p>A ZARAKI SPORTS é marcada por um compromisso inabalável com a qualidade e a inovação. Com uma equipe de
+                especialistas apaixonados, a empresa se dedica a selecionar os modelos mais sofisticados, garantindo que
+                cada veículo represente o auge da engenharia e do design automotivo. O atendimento personalizado cria
+                experiências únicas que vão além da simples compra de um carro.
+            </p>
+        </div>
+    </div>
 
 
 
