--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -16,14 +16,17 @@
     <header>
         <nav>
 
+
             <a href="#" class="logo">
                 <img src="../avaliação individual/assets/img/logo.png" alt="logo da loja">
             </a>
 
             <ul class="menu">
-                <li><a href="#">Carros</a></li>
+                <li><a href="#carros-destaque">Carros</a></li>
                 <li><a href="#">Avaliações</a></li>
+                <li><a href="#sinopse-loja">Origem</a></li>
                 <li><a href="#">Ajuda</a></li>
+            
             </ul>
 
             <ul class="foto-perfil">
@@ -34,7 +37,7 @@
     <figure class="banner-principal">
         <img src="../avaliação individual/assets/img/banner.jpg" alt="banner do inicio ">
     </figure>
-
+    <section id="sinopse-loja">
     <div class="container">
         <div class="img-sinopse">
             <img src="../avaliação individual/assets/img/sinopse-loja.jpg" alt="">
@@ -55,7 +58,50 @@
             </p>
         </div>
     </div>
-
+</section>
+    <section id="carros-destaque">
+        <h3 class="titulo">Destaques da Semana</h3>
+        <main class="container-cards">
+            <div class="cards-1">
+                <figure>
+                    <img src="../avaliação individual/assets/img/lambo-card.jpeg" alt="lamborghini SVJ card"
+                        class="foto-card">
+                    <figcaption>
+                        <h4>Lamborghini SVJ</h4>
+                        <p class="descricao-card">A Lamborghini Aventador SVJ é um superesportivo de 2 lugares, equipado
+                            com um motor V12 de 6,5 litros, entregando 770 cv. Focada em desempenho extremo, combina
+                            leveza, aerodinâmica avançada e tração integral, sendo uma das versões mais potentes do
+                            modelo Aventador.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="cards-1">
+                <figure>
+                    <img src="../avaliação individual/assets/img/dodge-card.jpeg" alt="dodge card" class="foto-card">
+                    <figcaption>
+                        <h4>Dodge Challenger Demon</h4>
+                        <p class="descricao-card">O Dodge Challenger Demon é um muscle car de alto desempenho, com 840
+                            cavalos de potência e 1044 Nm de torque, garantindo aceleração impressionante. Seu motor V8
+                            supercharged e pressões de até 14,5 psi no sistema de indução fazem dele um dos carros mais
+                            rápidos da categoria. Com capacidade para dois ocupantes, é projetado para oferecer
+                            desempenho extremo, com um foco em velocidade e potência em pistas.</p>
+                    </figcaption>
+                </figure>
+            </div>
+            <div class="cards-1">
+                <figure>
+                    <img src="../avaliação individual/assets/img/mclaren-card.jpeg" alt="jesko card" class="foto-card">
+                    <figcaption>
+                        <h4>Mclaren 765LT</h4>
+                        <p class="descricao-card">A McLaren 765LT é um supercarro com 765 cavalos, 800 Nm de torque e
+                            acelera de 0 a 100 km/h em 2,8 segundos. Seu ponto forte é a combinação de potência extrema,
+                            leveza e aerodinâmica, garantindo desempenho e precisão excepcionais em qualquer situação.
+                        </p>
+                    </figcaption>
+                </figure>
+            </div>
+        </main>
+    </section>
 
 
 
