--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zaraki Sports</title>
-    <link rel="stylesheet" href="./assets/css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/form.css">
 </head>
 
 <body>
 
     <header>
         <nav>
-
-
             <a href="#" class="logo">
                 <img src="../avaliação individual/assets/img/logo.png" alt="logo da loja">
             </a>
@@ -26,7 +26,7 @@
                 <li><a href="#">Avaliações</a></li>
                 <li><a href="#sinopse-loja">Origem</a></li>
                 <li><a href="#">Ajuda</a></li>
-            
+
             </ul>
 
             <ul class="foto-perfil">
@@ -38,27 +38,31 @@
         <img src="../avaliação individual/assets/img/banner.jpg" alt="banner do inicio ">
     </figure>
     <section id="sinopse-loja">
-    <div class="container">
-        <div class="img-sinopse">
-            <img src="../avaliação individual/assets/img/sinopse-loja.jpg" alt="">
-        </div>
-        <div class="text">
-            <h2>Zaraki Sports</h2>
+        <div class="container">
+            <div class="img-sinopse">
+                <img src="../avaliação individual/assets/img/sinopse-loja.jpg" alt="">
+            </div>
+            <div class="text">
+                <h2>Zaraki Sports</h2>
 
-            <p>Fundada em 23 de novembro de 2007, a ZARAKI SPORTS surgiu da paixão por automóveis de luxo e do sonho de
-                oferecer uma experiência incomparável no setor. Desde o início, a empresa enfrentou desafios
-                significativos, mas, com determinação e uma visão clara, superou cada obstáculo, tornando-se a maior
-                referência do mercado.
-            </p>
+                <p>Fundada em 23 de novembro de 2007, a ZARAKI SPORTS surgiu da paixão por automóveis de luxo e do sonho
+                    de
+                    oferecer uma experiência incomparável no setor. Desde o início, a empresa enfrentou desafios
+                    significativos, mas, com determinação e uma visão clara, superou cada obstáculo, tornando-se a maior
+                    referência do mercado.
+                </p>
 
-            <p>A ZARAKI SPORTS é marcada por um compromisso inabalável com a qualidade e a inovação. Com uma equipe de
-                especialistas apaixonados, a empresa se dedica a selecionar os modelos mais sofisticados, garantindo que
-                cada veículo represente o auge da engenharia e do design automotivo. O atendimento personalizado cria
-                experiências únicas que vão além da simples compra de um carro.
-            </p>
+                <p>A ZARAKI SPORTS é marcada por um compromisso inabalável com a qualidade e a inovação. Com uma equipe
+                    de
+                    especialistas apaixonados, a empresa se dedica a selecionar os modelos mais sofisticados, garantindo
+                    que
+                    cada veículo represente o auge da engenharia e do design automotivo. O atendimento personalizado
+                    cria
+                    experiências únicas que vão além da simples compra de um carro.
+                </p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
     <section id="carros-destaque">
         <h3 class="titulo">Destaques da Semana</h3>
         <main class="container-cards">
@@ -102,7 +106,57 @@
             </div>
         </main>
     </section>
+    <section id="local-loja">
+        <div class="container-local">
+            <h3>Suporte</h3>
+            <form>
+                <div class="form-group">
+                    <label for="nome">Nome:</label>
+                    <input type="text" id="nome">
+                </div>
+                <div class="form-group">
+                    <label for="telefone">Telefone:</label>
+                    <input type="text" id="telefone">
+                </div>
+                <div class="form-group">
+                    <label for="idade">Idade:</label>
+                    <input type="text" id="idade" class="half-width">
+                </div>
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <input type="text" id="email">
+                </div>
+                <div class="form-group">
+                    <label for="assunto">Assunto:</label>
+                    <input type="text" id="assunto">
+                </div>
+                <div class="form-group">
+                    <input type="submit" value="Enviar">
+                </div>
+            </form>
+            <div class="mapa"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=400&amp;height=400&amp;hl=en&amp;q=Av. Dona Renata, 2904 Centro - CEP 13604-000 Araras - SP&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://sprunkiplay.com/">Sprunki Game</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}</style></div>
+        </div>
+    
+    </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    </section>
 
 
 
