--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -25,7 +25,7 @@
                 <li><a href="#carros-destaque">Carros</a></li>
                 <li><a href="#">Avaliações</a></li>
                 <li><a href="#sinopse-loja">Origem</a></li>
-                <li><a href="#">Ajuda</a></li>
+                <li><a href="#local-loja">Suporte</a></li>
 
             </ul>
 
@@ -107,37 +107,51 @@
         </main>
     </section>
     <section id="local-loja">
-        <div class="container-local">
-            <h3>Suporte</h3>
+        <div class="container-local"> 
             <form>
+                <h3>Suporte</h3>
                 <div class="form-group">
                     <label for="nome">Nome:</label>
                     <input type="text" id="nome">
                 </div>
-                <div class="form-group">
-                    <label for="telefone">Telefone:</label>
-                    <input type="text" id="telefone">
-                </div>
-                <div class="form-group">
-                    <label for="idade">Idade:</label>
-                    <input type="text" id="idade" class="half-width">
+                <div class="form-group-duo">
+                    <div class="form-group">
+                        <label for="telefone">Telefone:</label>
+                        <input type="tel" id="telefone" name="telefone" 
+                            pattern="^\(\d{2}\) \d{9}$" 
+                            placeholder="(XX) XXXXXXXX" required 
+                            maxlength="14"
+                            oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\d{2})(\d{0,9})/, '($1) $2');">
+                        </div>
+                    <div class="form-group">
+                        <label for="idade">Data de Nascimento:</label>
+                        <input type="date" id="idade" class="form-idade">
+                    </div>
                 </div>
                 <div class="form-group">
                     <label for="email">Email:</label>
-                    <input type="text" id="email">
+                    <input type="email" id="email">
                 </div>
                 <div class="form-group">
                     <label for="assunto">Assunto:</label>
-                    <input type="text" id="assunto">
+                    <input type="text" id="assunto" class="form-assunto">
                 </div>
                 <div class="form-group">
                     <input type="submit" value="Enviar">
-                </div>
+                </div> 
             </form>
-            <div class="mapa"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=400&amp;height=400&amp;hl=en&amp;q=Av. Dona Renata, 2904 Centro - CEP 13604-000 Araras - SP&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://sprunkiplay.com/">Sprunki Game</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}</style></div>
-        </div>
+            <div class="map-container">
+                <div class="mapa">
+                    <div class="gmap_canvas">
+                        <div class="mapa"><div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=400&amp;height=400&amp;hl=en&amp;q=Av. Dona Renata, 2904 Centro - CEP 13604-000 Araras - SP&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://sprunkiplay.com/">Sprunki Game</a></div><style>.mapouter{position:relative;text-align:right;width:100%;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:100%;height:400px;}.gmap_iframe {height:400px!important;}</style>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> 
+    </section>
     
-    </section>
+    
 
 
 
@@ -156,7 +170,6 @@
 
 
 
-    </section>
 
 
 
