so falta responsividade

--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -144,8 +144,8 @@
                         <div class="mapa">
                             <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0"
                                     scrolling="no" marginheight="0" marginwidth="0"
-                                    src="https://maps.google.com/maps?width=400&amp;height=400&amp;hl=en&amp;q=Av. Dona Renata, 2904 Centro - CEP 13604-000 Araras - SP&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
-                                    href="https://sprunkiplay.com/">Sprunki Game</a></div>
+                                    src="https://maps.google.com/maps?width=400&amp;height=400&amp;hl=en&amp;q=Av. Dona Renata, 2904 Centro - CEP 13604-000 Araras - SP&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
+                                    </div>
                             <style>
                                 .mapouter {
                                     position: relative;
@@ -199,28 +199,6 @@
             </div>
         </div>
 </section>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </body>
 
 </html>
