--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <link rel="stylesheet" href="./assets/css/form.css">
     <link rel="stylesheet" href="./assets/css/rodape.css">
+    <link rel="icon" href="../avaliação individual/assets/img/logo.png">
 </head>
 
 <body>
