Mudei a responsividade do style

--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -46,20 +46,16 @@
             <div class="text">
                 <h2>Zaraki Sports</h2>
 
-                <p>Fundada em 23 de novembro de 2007, a ZARAKI SPORTS surgiu da paixão por automóveis de luxo e do sonho
-                    de
+                <p>Fundada em 23 de novembro de 2007, a ZARAKI SPORTS surgiu da paixão por automóveis de luxo e do sonho de
                     oferecer uma experiência incomparável no setor. Desde o início, a empresa enfrentou desafios
                     significativos, mas, com determinação e uma visão clara, superou cada obstáculo, tornando-se a maior
                     referência do mercado.
                 </p>
 
-                <p>A ZARAKI SPORTS é marcada por um compromisso inabalável com a qualidade e a inovação. Com uma equipe
-                    de
-                    especialistas apaixonados, a empresa se dedica a selecionar os modelos mais sofisticados, garantindo
-                    que
-                    cada veículo represente o auge da engenharia e do design automotivo. O atendimento personalizado
-                    cria
-                    experiências únicas que vão além da simples compra de um carro.
+                <p>A ZARAKI SPORTS é marcada por um compromisso inabalável com a qualidade e a inovação. Com uma equipe de
+                    especialistas apaixonados, a empresa se dedica a selecionar os modelos mais sofisticados, garantindo que
+                    cada veículo represente o auge da engenharia e do design automotivo. O atendimento personalizado 
+                    cria experiências únicas que vão além da simples compra de um carro.
                 </p>
             </div>
         </div>
