--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -46,15 +46,18 @@
             <div class="text">
                 <h2>Zaraki Sports</h2>
 
-                <p>Fundada em 23 de novembro de 2007, a ZARAKI SPORTS surgiu da paixão por automóveis de luxo e do sonho de
+                <p>Fundada em 23 de novembro de 2007, a ZARAKI SPORTS surgiu da paixão por automóveis de luxo e do sonho
+                    de
                     oferecer uma experiência incomparável no setor. Desde o início, a empresa enfrentou desafios
                     significativos, mas, com determinação e uma visão clara, superou cada obstáculo, tornando-se a maior
                     referência do mercado.
                 </p>
 
-                <p>A ZARAKI SPORTS é marcada por um compromisso inabalável com a qualidade e a inovação. Com uma equipe de
-                    especialistas apaixonados, a empresa se dedica a selecionar os modelos mais sofisticados, garantindo que
-                    cada veículo represente o auge da engenharia e do design automotivo. O atendimento personalizado 
+                <p>A ZARAKI SPORTS é marcada por um compromisso inabalável com a qualidade e a inovação. Com uma equipe
+                    de
+                    especialistas apaixonados, a empresa se dedica a selecionar os modelos mais sofisticados, garantindo
+                    que
+                    cada veículo represente o auge da engenharia e do design automotivo. O atendimento personalizado
                     cria experiências únicas que vão além da simples compra de um carro.
                 </p>
             </div>
@@ -137,32 +140,11 @@
             </form>
             <div class="map-container">
                 <div class="mapa">
-                    <div class="gmap_canvas">
-                        <div class="mapa">
-                            <div class="gmap_canvas"><iframe class="gmap_iframe" width="100%" frameborder="0"
-                                    scrolling="no" marginheight="0" marginwidth="0"
-                                    src="https://maps.google.com/maps?width=400&amp;height=400&amp;hl=en&amp;q=Av. Dona Renata, 2904 Centro - CEP 13604-000 Araras - SP&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-                                    </div>
-                            <style>
-                                .mapouter {
-                                    position: relative;
-                                    text-align: right;
-                                    width: 100%;
-                                    height: 400px;
-                                }
-
-                                .gmap_canvas {
-                                    overflow: hidden;
-                                    background: none !important;
-                                    width: 100%;
-                                    height: 400px;
-                                }
-
-                                .gmap_iframe {
-                                    height: 400px !important;
-                                }
-                            </style>
-                        </div>
+                    <div class="mapa">
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3689.950146709655!2d-47.37633452470579!3d-22.35551117964697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94c8773471378677%3A0x47795a41c2a877a9!2sPa%C3%ADto%20Motors!5e0!3m2!1spt-BR!2sbr!4v1738813083861!5m2!1spt-BR!2sbr"
+                            width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                            referrerpolicy="no-referrer-when-downgrade"></iframe>
                     </div>
                 </div>
             </div>
@@ -189,7 +171,6 @@
                 <p>Opção 3</p>
             </div>
         </div>
-</section>
+    </section>
 </body>
-
 </html>
