--- a/avaliação individual/index.html
+++ b/avaliação individual/index.html
@@ -122,7 +122,7 @@
                             oninput="this.value = this.value.replace(/[^0-9]/g, '').replace(/(\d{2})(\d{0,9})/, '($1) $2');">
                     </div>
                     <div class="form-group">
-                        <label for="idade">Data de Nascimento:</label>
+                        <label for="idade">Nascimento:</label>
                         <input type="date" id="idade" class="form-idade">
                     </div>
                 </div>
